@@ -270,7 +270,7 @@ void service_http(char *ip, int sp, unsigned char options, char *miscptr, FILE *
         if (sock < 0) {
           if (freemischttp)
             free(miscptr);
-          fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
+          if (quiet != 1) fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
           hydra_child_exit(1);
         }
         next_run = 2;
